samples/_failures_safe/1761253126_08c73c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9c35f163.c: In function ‘main’:
./samples/SAFE/__tmp_9c35f163.c:155:5: error: ‘print_log’ undeclared (first use in this function)
  155 |     print_log
      |     ^~~~~~~~~
./samples/SAFE/__tmp_9c35f163.c:155:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_9c35f163.c:155:14: error: expected ‘;’ at end of input
  155 |     print_log
      |              ^
      |              ;
./samples/SAFE/__tmp_9c35f163.c:155:5: error: expected declaration or statement at end of input
  155 |     print_log
      |     ^~~~~~~~~
